--- a/src/app/components/profile/profile.component.html
+++ b/src/app/components/profile/profile.component.html
@@ -3,14 +3,14 @@
   <h3 class="logo" routerLink="" >QUIZKR</h3>
   <nav>
     <ul class="nav_links">
-      <li><a href="#et">Profile</a></li>
+      <li><a href="profile">Profile</a></li>
       <li><a href="#price">Pricing</a></li>
     </ul>
   </nav>
   <button class="arrow-button" (click)="this.toQuiz()"><a class="og-arrow"routerLink="quiz"
       href="">Take Instant Quiz</a><span class="arrow"></span>
   </button>
-  <a routerLink="register" *ngIf="!this.isLogged" class="cta" href="#"><button class="cta1" (click)="this.nav()">LOGIN</button></a>
+  <a routerLink="register" *ngIf="!this.isLogged" class="cta" href="http://localhost:4200/register"><button class="cta1" (click)="this.nav()">LOGIN</button></a>
   <a class="cta" *ngIf="this.isLogged"><button class="cta1" (click)="this.logout()">Logout</button></a>
 </header>
 
@@ -41,24 +41,24 @@
             </button>
             <span class="name mt-3">{{this.name}}</span> <span class="idd">@{{this.email}}</span>
             <div *ngIf="!this.isSub" class="d-flex flex-row justify-content-center align-items-center gap-2"> <span
-                class="idd1"> Quiz Enthusiast </span>  </div>
+                class="idd1"> <mark style="background-color: yellowgreen;"><i>Not Subscribed! </i></mark> </span>  </div>
             <div *ngIf="this.isSub" class="d-flex flex-row justify-content-center align-items-center gap-2"> <span
-                class="idd1">Subscribed QuizKR 🔥</span>  </div>
+                class="idd1"><mark style="background-color: yellowgreen;"><i>🔥 Subscribed QuizKR 🔥</i></mark></span>  </div>
             <div class="d-flex flex-row justify-content-center align-items-center mt-3">
               <span class="number">{{this.tleft}} <span class="follow">Number of Quiz Turns Left</span></span>
             </div>
-            <div class=" d-flex mt-2"> <button class="btn1 btn-dark" (click)="this.nav()">View Quiz Attendees</button> </div>
-            <div *ngIf="!this.isSub" class="text mt-3"> <p> Quiz Enthusiast <br>
+            <div class=" d-flex mt-2"> <button class="btn1 btn-dark" (click)="this.nav()" [disabled]="!this.isq">View Quiz Attendees</button> </div>
+            <div *ngIf="!this.isSub" class="text mt-3"> <p style="text-align: center;"> Quiz Enthusiast <br>
                 Hello! I'm here on QuizKR to dive into the world of knowledge and have a blast with quizzes.
                 Every question is a chance to learn something new.
                 Join me on this exciting journey! 📚🧠 #CuriousMind</p>
-            </div>
-            <div *ngIf="this.isSub" class="text mt-3"> <p>🌟 Proud Subscriber 
+            </div> 
+            <div *ngIf="this.isSub" class="text mt-3"> <p style="text-align: center;"> 🌟         Proud Subscriber          🌟<br>
                 Hey there! I'm a proud subscriber of QuizkR – where learning meets fun. Your support helps me explore
                 fascinating quizzes and contribute to the growth of this incredible community.
                 Let's keep the curiosity alive together! 🚀🧠 #QuizEnthusiast</p>
             </div>
-            <div class=" px-2 rounded mt-4 date "> <div class="example">Joined {{this.jmon}},{{this.jyr}}</div> </div>
+            <div class=" px-2 rounded mt-4 date "> <div class="example" style="text-align: center;">Joined {{this.jmon}}, {{this.jyr}}</div> </div>
           </div>
         </div>
       </div>
@@ -78,19 +78,19 @@
         </div>
         <div class="package-name"></div>
         <div class="btn"><button (click)="makePayment(29)">Add to Cart</button></div> 
-        <ul class="features" style="margin-top: -50px;">
+        <ul class="features" style="margin-top: -80px;">
           <h3>Features</h3>
           <li>
-            <span class="list-name">Upto 15 Own Quiz Generations</span>
+            <span class="list-name" style="padding-left: 30px;">Upto 15 Own Quiz Generations</span>
             <span class="icon check"><i class="fas fa-check"></i></span>
           </li>
           <li>
-            <span class="list-name">Upto 20 Playable AI Quizzes</span>
+            <span class="list-name" style="padding-left: 30px;">Upto 20 Playable AI Quizzes</span>
             <span class="icon check"><i class="fas fa-check"></i></span>
           </li>
           <h3>Upcoming</h3>
           <li>
-            <span class="list-name">Default Changable  Themes</span>
+            <span class="list-name" style="padding-left: 30px;">Default Changable  Themes</span>
             <span class="icon cross"><i class="fas fa-times"></i></span>
           </li>
         </ul>
@@ -108,7 +108,7 @@
         </div>
         <div class="package-name"></div>
         <div class="btn"><button (click)="makePayment(99)">Add to Cart</button></div>
-        <ul class="features" style="margin-top: -80px;">
+        <ul class="features" style="margin-top: -100px;">
           <h3>Features</h3>
           <li style="padding-left: 28px;">
             <span class="list-name">Unlimited Quiz Generations And Hostings</span>
@@ -121,10 +121,6 @@
           <h3>Upcoming</h3>
           <li style="padding-left: 30px; padding-top: 10px;">
             <span class="list-name">Various Background Themes</span>
-            <span class="icon check"><i class="fas fa-check"></i></span>
-          </li>
-          <li style="padding-left: 34px; margin: -10px;">
-            <span class="list-name">AI Enhanced Score DashBoard</span>
             <span class="icon check"><i class="fas fa-check"></i></span>
           </li>
         </ul> 
@@ -141,19 +137,19 @@
         </div>
         <div class="package-name"></div>
         <div class="btn"><button (click)="makePayment(59)">Add to Cart</button></div>
-        <ul class="features" style="margin-top: -60px;">
+        <ul class="features" style="margin-top: -90px;">
           <h3>Features</h3>
           <li>
-            <span class="list-name">25 Quiz Generations And Hostings</span>
+            <span class="list-name" style="padding-left: 30px;">25 Quiz Generations And Hostings</span>
             <span class="icon check"><i class="fas fa-check"></i></span>
           </li>
           <li>
-            <span class="list-name">Unlimited Playable Quizzes</span>
+            <span class="list-name" style="padding-left: 30px;">Unlimited Playable Quizzes</span>
             <span class="icon check"><i class="fas fa-check"></i></span>
           </li>
           <h3>Upcoming</h3>
           <li>
-            <span class="list-name">Limited Theme Implementations</span>
+            <span class="list-name" style="padding-left: 30px;">Limited Theme Implementations</span>
             <span class="icon check"><i class="fas fa-check"></i></span>
           </li>
         </ul>
