--- a/src/app/components/quiz/quiz.component.html
+++ b/src/app/components/quiz/quiz.component.html
@@ -1,5 +1,19 @@
 <header>
     <h3 class="logo" routerLink="">QUIZKR</h3>
+    <nav>
+		<ul class="nav_links">
+			<li class="dropdown" *ngIf="this.isLogged" >
+				<a class="dropbtn">
+				  <img src="https://cdn.iconscout.com/icon/free/png-256/free-profile-417-1163876.png?f=webp" alt="Profile Icon" class="profile-icon">
+				</a>
+				<div class="dropdown-content">
+				  <a href="">Home</a><br>
+				  <a href="http://localhost:4200/profile">Profile</a><br>
+				</div>
+			</li>
+		</ul>
+	</nav>
+	<a *ngIf="!this.isLogged" class="cta" routerLink="register"><button class="cta1" (click)="this.nav()">LOGIN</button></a>
 </header>
 
 <body>
@@ -56,8 +70,8 @@
                     </ol>
                 </div>
                 <div class="d-flex justify-content-between">
-                    <button [disabled]="currentQuestion===0" class="btn" (click)="previousQuestion()">Prev<i
-                            class="fa text-primary fa-chevron-left fa-3x" aria-hidden="true"></i></button>
+                    <!-- <button [disabled]="currentQuestion===0" class="btn" (click)="previousQuestion()">Prev<i
+                            class="fa text-primary fa-chevron-left fa-3x" aria-hidden="true"></i></button> -->
                     <button class="btn" (click)="resetQuiz()">Reset<i class="fa fa-refresh text-primary fa-3x"
                             aria-hidden="true"></i></button>
                     <button class="btn" (click)="nextQuestion()">Next<i class="fa text-primary fa-chevron-right fa-3x"
