--- a/src/app/components/register/register.component.html
+++ b/src/app/components/register/register.component.html
@@ -35,7 +35,7 @@
             <div class="row full-height justify-content-center" style="padding-top: 50px;">
                 <div class="col-12 text-center align-self-center py-5">
                     <div class="section pb-5 pt-5 pt-sm-2 text-center">
-                        <h6 class="mb-0 pb-3"><span>Log In </span><span>Sign Up</span></h6>
+                        <h6 class="mb-0 pb-3" style="color: black; font-size: 20px;"><span><b>Log In</b> </span><span><b>Sign Up</b></span></h6>
                         <input class="checkbox" type="checkbox" id="reg-log" name="reg-log" />
                         <label for="reg-log"></label>
                         <div class="card-3d-wrap mx-auto">
@@ -77,7 +77,7 @@
                                 <div class="card-back">
                                     <div class="center-wrap">
                                         <div class="section text-center">
-                                            <h4 class="mb-4 pb-3">Sign Up</h4>
+                                            <h4 class="mb-4 pb-3" style="margin-bottom: -50px;">Sign Up</h4>
                                             <form (ngSubmit)="register()" #registrationForm="ngForm" novalidate>
                                                 <div class="form-group">
                                                     <input type="text" name="userName" class="form-style"
